--- a/css/container.css
+++ b/css/container.css
@@ -61,7 +61,7 @@ p.shortcut_item_title {
 
 /* home_products just_dropped */
 .just_dropped {
-	margin-top: 50px;
+	margin-top: 30px;
 	padding-top: 0;
 	padding-bottom: 0;
 }
@@ -78,6 +78,7 @@ p.shortcut_item_title {
 	margin: 0 auto;
 	padding: 0 40px;
 	max-width: 1280px;
+	margin-top: 20px;
 }
 
 .product_list_wrap {
@@ -130,7 +131,7 @@ div.product img {
 }
 
 .brand {
-	padding-top: 20px;
+	padding-top: 5px;
 }
 
 p.brand-text {
@@ -141,12 +142,16 @@ p.brand-text {
 	overflow: hidden;
 	/* line-height: 17px; */
 	height: 20px;
-
 }
 
+.sub_title p.name {
+	font-size: 1.2rem;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
 
 p.name {
-	font-size: 1.2rem;
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
@@ -231,72 +236,88 @@ a.btn {
 	width: 100%;
 	border-radius: 10px;
 }
+
 .most_popular {
-	margin-top: 40px;
+	margin-top: 20px;
 }
 
 /* //short_collection_02 */
 
 /* banner Halloween-01 */
 .banner {
-	padding-top: 50px;
+	padding-top: 30px;
 	width: 100%;
 	height: 100%;
-	margin:0 auto;
+	margin: 0 auto;
 }
+
 .banner_item {
 	width: 100%;
 	display: flex;
 	justify-items: center;
-	background-color: #5800ce;
 }
+
 .item_inner {
 	max-width: 1280px;
 	margin: 0 auto;
 }
-.img_box{
-	width:100%;
-	height:100%;
+
+.img_box {
+	width: 100%;
+	height: 100%;
 }
-.img_box img{
-	width:100%;
-	height:100%;
+
+.img_box img {
+	width: 100%;
+	height: 100%;
 	object-fit: cover;
 }
+
 /* //banner Halloween-01 */
 
 /* Style Pick */
 .social_style_slide {
-  margin-top: 50px;
+	margin-top: 30px;
 }
 
 .style_wrap {
-  max-width: 1280px;
-  margin: 0 auto;
-  overflow: hidden;
+	max-width: 1280px;
+	margin: 0 auto;
+	overflow: hidden;
 }
 
 .style_content {
-  width: 100%;
-  height: auto;
+	width: 100%;
+	height: auto;
 }
 
 .style_slider {
-  width: 100%;
-  height: 100%;
+	width: 100%;
+	height: 100%;
 }
 
-.style_img_box{
-  width: 180px;
-  height: 100%;
+.style_img_box {
+	width: 180px;
+	height: 100%;
 }
 
 .style_img_box img {
-  width: calc(100% - 15px);
-  height: 100%;
-  border-radius: 10px;
+	width: calc(100% - 15px);
+	height: 100%;
+	border-radius: 10px;
 }
 /* //Style Pick */
+
+.style_img_box span {
+	text-align: center;
+	display: block;
+	color: white;
+	position: relative;
+	top: 50px;
+	right:70px;
+	font-weight: bold;
+}
+
 
 
 
