--- a/css/container.css
+++ b/css/container.css
@@ -306,17 +306,84 @@ a.btn {
 	height: 100%;
 	border-radius: 10px;
 }
-/* //Style Pick */
 
 .style_img_box span {
 	text-align: center;
 	display: block;
-	color: white;
+	color: #FFFAFA;
 	position: relative;
 	top: 50px;
-	right:70px;
+	right: 70px;
 	font-weight: bold;
 }
+
+/* //Style Pick */
+
+/* banner_bottom left, right */
+.banner_bottom {
+	display: flex;
+}
+
+.banner_box_left {
+	background-color: #565656;
+	background-image: url(../img/home_banner_bottom1.79549cb.png);
+	position: relative;
+	padding: 36px 32px 0;
+	width: 100%;
+	height: 200px;
+	background-position: 100% 0;
+	background-repeat: no-repeat;
+	background-size: 350px 200px;
+}
+
+.banner_info {
+	display: block;
+	max-width: 300px;
+	color: #fff;
+}
+
+.info_subtitle {
+	font-size: 12px;
+	text-transform: uppercase;
+	font-weight: bold;
+}
+
+p.info_title {
+	padding-top: 12px;
+    text-shadow: -1px 0 #565656, 0 1px #565656, 1px 0 #565656, 0 -1px #565656;
+    font-size: 16px;
+    letter-spacing: -.16px;
+}
+
+span.info_txt {
+	margin-top: 16px;
+    padding: 0 7px;
+    display: inline-block;
+    font-size: 12px;
+    letter-spacing: -.06px;
+    height: 29px;
+    line-height: 27px;
+    border-radius: 6px;
+    border: 1px solid hsla(0,0%,100%,.8);
+    color: #fff;
+}
+
+.banner_box_right {
+	background-color: #3b3a3c;
+	background-image: url(../img/home_banner_bottom2.0077547.png);
+	position: relative;
+	padding: 36px 32px 0;
+	width: 100%;
+	height: 200px;
+	background-position: 100% 0;
+	background-repeat: no-repeat;
+	background-size: 350px 200px;
+}
+
+.banner_bottom {
+	margin-top: 100px;
+}
+/* //banner_bottom left, right */
 
 
 
