--- a/asset/style.css
+++ b/asset/style.css
@@ -40,6 +40,7 @@ body {
   color: #222;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: none;
+  font-family: 'Noto Sans KR', sans-serif;
 }
 
 a {
